TestCases/Errors/range_value/observations/aut_08_obs.spm
 obs   16-6   0.000882148650136912 
 obs   17-6   0.000542979531561825 
 obs   15-7   0.000332137110433604 
 obs   16-7   0.000487051178107147 
 obs   7-13   0.00169590643274854 
 obs   6-14   0.00134259259259259 
 obs   8-14   0.00494533461629642 
 obs   9-14   0.00517368810051737 
 obs   6-15   0.00810185185185185 
 obs   6-16   0.00525083612040134 
 obs   7-16   0.00615384615384615 
 obs   7-17   0 
 obs   11-19   0.0197101449275362 
 obs   8-20   0 
 obs   4-21   0.000151515151515152 
 obs   5-21   0 
 obs   4-22   0.000909090909090909 
 error_value   16-6   0 
 error_value   17-6   0 
 error_value   15-7   0 
 error_value   16-7   0 
 error_value   7-13   0 
 error_value   6-14   0 
 error_value   8-14   0 
 error_value   9-14   0 
 error_value   6-15   0 
 error_value   6-16   0 
 error_value   7-16   0 
 error_value   7-17   0 
 error_value   11-19   0 
 error_value   8-20   0 
 error_value   4-21   0 
 error_value   5-21   0 
 error_value   4-22   0 
